<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.hazelcast.evergreencache</groupId>
    <artifactId>parent</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>app</module>
        <module>update</module>
        <module>pipeline</module>
    </modules>
    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>2.7.1</spring-boot.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>3.1.4</version>
                    <configuration>
                        <to>
                            <image>hazelcast/evergreencache/${project.artifactId}:${project.version}</image>
                        </to>
                        <container>
                            <jvmFlags>
                                <jvmFlag>--add-modules</jvmFlag>
                                <jvmFlag>java.se</jvmFlag>
                                <jvmFlag>--add-exports</jvmFlag>
                                <jvmFlag>java.base/jdk.internal.ref=ALL-UNNAMED</jvmFlag>
                                <jvmFlag>--add-opens</jvmFlag>
                                <jvmFlag>java.base/java.lang=ALL-UNNAMED</jvmFlag>
                                <jvmFlag>--add-opens</jvmFlag>
                                <jvmFlag>java.base/java.nio=ALL-UNNAMED</jvmFlag>
                                <jvmFlag>--add-opens</jvmFlag>
                                <jvmFlag>java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
                                <jvmFlag>--add-opens</jvmFlag>
                                <jvmFlag>java.management/sun.management=ALL-UNNAMED</jvmFlag>
                                <jvmFlag>--add-opens</jvmFlag>
                                <jvmFlag>jdk.management/com.sun.management.internal=ALL-UNNAMED</jvmFlag>
                            </jvmFlags>
                        </container>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>dockerBuild</goal>
                            </goals>
                            <phase>compile</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>